force-app/main/default/objects/clariti__Invoice__c/clariti__Invoice__c.object-meta.xml
<CustomObject>
    <description>Invoices are used to bill a client for your products and/or services, and help keep track the receivables income.</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{MM}{DD}{YYYY}-{000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>