force-app/main/default/objects/clariti__Invoice__c/fields/clariti__BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>clariti__BillingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>