force-app/main/default/objects/clariti__Invoice__c/fields/clariti__DueDate__c.field-meta.xml
<CustomField>
    <fullName>clariti__DueDate__c</fullName>
    <inlineHelpText>The date by when the Invoice payment is due</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>