force-app/main/default/objects/clariti__Invoice__c/fields/clariti__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>clariti__InvoiceDate__c</fullName>
    <inlineHelpText>The date when the invoice is posted</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>