force-app/main/default/objects/clariti__Invoice__c/fields/clariti__InvoiceReference__c.field-meta.xml
<CustomField>
    <fullName>clariti__InvoiceReference__c</fullName>
    <inlineHelpText>Reference or Unique Identifier for the invoice</inlineHelpText>
    <label>Invoice Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>