force-app/main/default/objects/clariti__Invoice__c/fields/clariti__TotalAmountOutstanding__c.field-meta.xml
<CustomField>
    <fullName>clariti__TotalAmountOutstanding__c</fullName>
    <label>Total Amount Outstanding</label>
    <summarizedField>clariti__InvoiceItem__c.clariti__AmountOutstanding__c</summarizedField>
    <summaryForeignKey>clariti__InvoiceItem__c.clariti__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>