force-app/main/default/objects/clariti__Invoice__c/fields/clariti__TotalAmountPaid__c.field-meta.xml
<CustomField>
    <fullName>clariti__TotalAmountPaid__c</fullName>
    <label>Total Amount Paid</label>
    <summarizedField>clariti__InvoiceItem__c.clariti__AmountPaid__c</summarizedField>
    <summaryForeignKey>clariti__InvoiceItem__c.clariti__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>