force-app/main/default/objects/clariti__Invoice__c/fields/clariti__TotalInvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__TotalInvoiceAmount__c</fullName>
    <label>Total Invoice Amount</label>
    <summarizedField>clariti__InvoiceItem__c.clariti__InvoiceAmount__c</summarizedField>
    <summaryForeignKey>clariti__InvoiceItem__c.clariti__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>